# BoyC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/codespaces/: devcontainer.json
doc/: opcodes.json
scripts/: download_test_roms.sh
src/: cpu.c  cpu.h  main.c  main.cpp
src/audio/: audio.cpp  audio.h  audio_stub.cpp
src/cpu/: cpu.cpp  cpu.h  cpu_ops.cpp  cpu_ops.h
src/display/: display.cpp  display.h  display_stub.cpp
src/mem/: mem.cpp  mem.h
src/ppu/: ppu.cpp  ppu.h
src/rom/: rom.cpp  rom.h
tests/: cpu-test.c  main.c
tests/audio/: audio-test.cpp
tests/cpu/: cpu-test.cpp
tests/ctest/: ctest.c  ctest.h
tests/display/: display-test.cpp
tests/helper/: test-helper.cpp  test-helper.h
